--- a/content_in_the_box.html
+++ b/content_in_the_box.html
@@ -8,14 +8,13 @@
 <body>
   <h1>Content in the box</h1>
   <div>
-  	<p><b>content:
-    <br>width - 300px
-    <br>height - 200px
+  	<p><b>Content:
+    <br>Width - 300px
+    <br>Height - 200px
 
-    <br><br>padding - 40px
-  	<br>margin - 20px
-  	<br>border - 20px</b></p>
+    <br><br>Padding - 40px
+  	<br>Margin - 20px
+  	<br>Border - 20px</b></p>
   </div>
-  <script src="lab1.js"></script>
  </body>
 </html>
