--- a/nagerecht.html
+++ b/nagerecht.html
@@ -37,7 +37,7 @@
     <li>Voeg de laatste 30 sec de mascarpone toe en klop tot een egale room.</li>
     <li>Snijd de plakken cake op maat van het glas en verdeel een plak op de bodem van het glas.</li>
     <li>Schep een laagje room, ongeveer even hoog als de cake in het glas.</li>
-    <li><span class="foto"><img src="1.jpg" width="250px;"><img src="2.jpg" width="250px;" ><img src=3.jpg width="250px;"><img src=4.jpg width="250px;"></span> </li>
+    <li><img src="1.jpg" width="250px;"><img src="2.jpg" width="250px;" ><img src=3.jpg width="250px;"><img src=4.jpg width="250px;"></li>
     <li>Snijd de aardbeien in plakjes en verdeel over de room (houd een paar plakjes achter voor de decoratie).
     <li>Leg weer een plak cake in het glas op de aardbeien en schep weer wat room er op.</li>
     <li>Decoreer de bovenzijde met een plakje aardbeien in de vorm van een hartje en wat chocoladerasp.</li>
