--- a/recept.html
+++ b/recept.html
@@ -17,7 +17,7 @@
 
 
 <div class="page1">
-  <h1 class="voorgerecht">Gehaktbrood</h1>
+  <h1 class="hoofdgerecht">Gehaktbrood</h1>
   <p>
     Dit gehaktbrood kan prima bij een avondmaaltijd, maar is ook een makkelijk gerecht voor een buffet.
   </p>
@@ -46,7 +46,7 @@
   </ol>
 
   <img src="gehaktbrood.jpg" style="border: 1px solid grey; margin-left: 200px;">
-  
+
   <p class= eind><b>Tip </b>Lekker met meergranenstokbrood. Voor een minder zout gehaktbrood kun je dee bacon weglaten.</p>
 </div>
 </body>
