--- a/nagerecht.html
+++ b/nagerecht.html
@@ -16,7 +16,7 @@
 <div class="page1">
   <h1 style="margin-left: 350px; margin-top: 20px;">Chocolade aardbeien trifle
  </h1>
-  <img src="Chocolade_aardbeien_trifle.jpg" style="border: 1px solid grey; margin-left: 200px; margin-bottom: 20px;">
+  <img class="boven" src="Chocolade_aardbeien_trifle.jpg" alt='Chocolade_aardbeien_trifle.jpg'>
   <p style="margin-left: 425px; font-size: 19px;">* 25 MINUTEN ,, 2 PERSONEN *</p>
   <p class= "nagerecht_boven">
     Super simpel maar heerlijk toetje voor valentijnsdag: laagjes chocoladecake, room en aardbeien in een glaasje.
@@ -37,7 +37,7 @@
     <li>Voeg de laatste 30 sec de mascarpone toe en klop tot een egale room.</li>
     <li>Snijd de plakken cake op maat van het glas en verdeel een plak op de bodem van het glas.</li>
     <li>Schep een laagje room, ongeveer even hoog als de cake in het glas.</li>
-    <li><img src="1.jpg" width="250px;"><img src="2.jpg" width="250px;" ><img src=3.jpg width="250px;"><img src=4.jpg width="250px;"></li>
+    <li><img src="1.jpg" alt='1.jpg'><img src="2.jpg" alt='2.jpg' ><img src="3.jpg" alt='3.jpg'><img src="4.jpg" alt='4.jpg'></li>
     <li>Snijd de aardbeien in plakjes en verdeel over de room (houd een paar plakjes achter voor de decoratie).
     <li>Leg weer een plak cake in het glas op de aardbeien en schep weer wat room er op.</li>
     <li>Decoreer de bovenzijde met een plakje aardbeien in de vorm van een hartje en wat chocoladerasp.</li>
