--- a/recept.html
+++ b/recept.html
@@ -45,7 +45,7 @@
     <li>Haal de vorm uit de oven. Laat even afkoelen en haal het daarna uit de vorm. Serveer het gehaktbrood <br> op een schotel.</li>
   </ol>
 
-  <img src="gehaktbrood.jpg" style="border: 1px solid grey; margin-left: 200px;">
+  <img src="gehaktbrood.jpg" alt='gehaktbrood' style="border: 1px solid grey; margin-left: 200px;">
 
   <p class= eind><b>Tip </b>Lekker met meergranenstokbrood. Voor een minder zout gehaktbrood kun je dee bacon weglaten.</p>
 </div>
