--- a/voorgerecht.html
+++ b/voorgerecht.html
@@ -38,7 +38,7 @@
     <li>Voeg vervolgens de Alpro Sojadrink en de geklopte eieren toe.<br> Meng de bloem erdoor en roer totdat het een glad geheel is. Kruid het naar smaak<br> met de versgemalen peper en zout.</li>
     <li>Maak kleine pannenkoekje en serveer ze warm. Smullen!</li>
   </ol>
-  <img src="pannenkoek.jpg" style="border: 1px solid grey; margin-left: 200px;">
+  <img src="pannenkoek.jpg" alt='pannenkoek.jpg' style="border: 1px solid grey; margin-left: 200px;">
   <p class= "tweede_eind"><b>How it starts, depends on you</b></p>
 </div>
 
