--- a/recept.html
+++ b/recept.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
    <link rel="stylesheet" type="text/css" href="recept.css">
    <title>Gehaktbrood</title>
@@ -17,37 +17,42 @@
 
 
 <div class="page1">
-  <h1 class="hoofdgerecht">Gehaktbrood</h1>
+  <h1>Gehaktbrood</h1>
   <p>
     Dit gehaktbrood kan prima bij een avondmaaltijd, maar is ook een makkelijk gerecht voor een buffet.
   </p>
-  <h2>Ingrediënten</h2>
-  <ul>
-    <li>1 rode paprika</li>
-    <li>1 grone paprika</li>
-    <li>1 ui</li>
-    <li>2 tenen knoflook</li>
-    <li>50 gram bacon</li>
-    <li>½ bosje peterselie</li>
-    <li>400 gram mager  rundergehakt</li>
-    <li>50 gram paneermeel</li>
-    <li>1 ei</li>
-    <li>1 blikje tomatenpuree</li>
-    <li>1 theelepel</li>
-    <li>peper</li>
-  </ul>
-  <h2>Bereidingswijze</h2>
-  <ol>
-    <li>Warm de oven voor op 175 graden Celsius.</li>
-    <li>Maak de paprika's schoon en snijd ze in kleine stukjes. Maak de ui schoon en snijd deze fijn. Maak de <br> knofolook schoon. Snijd de bacon in dunne reepjes. Hak de peterselie fijn.</li>
-    <li>Doe het gehakt, paprika, ui, bacon, peterselie, paneermeel, ei, tomatenpuree, tabasco en peper in een <br>kom. Pers de tenen knofolook erboven uit en kneed goed totdat alle ingrediënten zijn gemend.</li>
-    <li>druk het mengsel in een cakevorm en bak deze ongeveer 1 uur in de oven.</li>
-    <li>Haal de vorm uit de oven. Laat even afkoelen en haal het daarna uit de vorm. Serveer het gehaktbrood <br> op een schotel.</li>
-  </ol>
+  
+  <div class="ingredienten">
+      <h2>Ingrediënten</h2>
+      <ul>
+        <li>1 rode paprika</li>
+        <li>1 grone paprika</li>
+        <li>1 ui</li>
+        <li>2 tenen knoflook</li>
+        <li>50 gram bacon</li>
+        <li>½ bosje peterselie</li>
+        <li>400 gram mager  rundergehakt</li>
+        <li>50 gram paneermeel</li>
+        <li>1 ei</li>
+        <li>1 blikje tomatenpuree</li>
+        <li>1 theelepel</li>
+        <li>peper</li>
+      </ul>
+    </div>
+      <div class="bereidingswijze"> 
+        <h2>Bereidingswijze</h2>
+        <ol>
+          <li>Warm de oven voor op 175 graden Celsius.</li>
+          <li>Maak de paprika's schoon en snijd ze in kleine stukjes. Maak de ui schoon en snijd deze fijn. Maak de <br> knofolook schoon. Snijd de bacon in dunne reepjes. Hak de peterselie fijn.</li>
+          <li>Doe het gehakt, paprika, ui, bacon, peterselie, paneermeel, ei, tomatenpuree, tabasco en peper in een <br>kom. Pers de tenen knofolook erboven uit en kneed goed totdat alle ingrediënten zijn gemend.</li>
+          <li>druk het mengsel in een cakevorm en bak deze ongeveer 1 uur in de oven.</li>
+          <li>Haal de vorm uit de oven. Laat even afkoelen en haal het daarna uit de vorm. Serveer het gehaktbrood <br> op een schotel.</li>
+        </ol>
+      </div>
 
-  <img src="gehaktbrood.jpg" alt='gehaktbrood' style="border: 1px solid grey; margin-left: 200px;">
+      <img class="gehaktbrood" src="gehaktbrood.jpg" alt='gehaktbrood'>
 
-  <p class= eind><b>Tip </b>Lekker met meergranenstokbrood. Voor een minder zout gehaktbrood kun je dee bacon weglaten.</p>
+      <p class= eind><b>Tip </b>Lekker met meergranenstokbrood. Voor een minder zout gehaktbrood kun je dee bacon weglaten.</p>
 </div>
 </body>
 </html>
